--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,6 @@ services:
         build: ./php
         volumes:
             - ./www:/usr/share/nginx/html
+            - ./php/php.ini:/usr/local/etc/php/php.ini
             - ./php/logs:/usr/local/var/log
         restart: always
